<resources>
    <string name="app_name">TuyaSDKDemo</string>
    <string name="action_settings">Settings</string>
    <string name="device_list">Device list</string>
    <string name="share_list">Share list</string>
    <string name="reNickName">ReNickName</string>
    <string name="ec_start">Start EZConfig</string>
    <string name="ec_cancel">Cancel EZConfig</string>
    <string name="remove_device">Remove Device</string>
    <string name="ap_start">Start APConfig</string>
    <string name="offline">Off-line</string>
    <string name="IntranetControl">Online-Intranet</string>
    <string name="OnlineControl">Online</string>
    <string name="Confirm">Confirm</string>
    <string name="at_login_sns">Sign in with social media account</string>
    <string name="binding">Binding&#046;&#046;</string>
    <string name="cancel_tip">OK</string>
    <string name="click_bind_phone">Tap bind phone number</string>
    <string name="click_set_neekname">Tap to set your name</string>
    <string name="contact_use_tip">You sign in with %s account</string>
    <string name="env_preview">(Preview)</string>
    <string name="env_wrong_tip">The device is online, while App is running under preview
        environment. Thus not controllable
    </string>
    <string name="ty_loading">Loading…</string>
    <string name="every_week_five">Every Friday</string>
    <string name="every_week_four">Every Thursday</string>
    <string name="every_week_one">Every Monday</string>
    <string name="every_week_seven">Every Sunday</string>
    <string name="every_week_six">Every Saturday</string>
    <string name="every_week_three">Every Wednesday</string>
    <string name="every_week_two">Every Tuesday</string>
    <string name="experience_center">Experience center</string>
    <string name="experience_center_enter">Enter experience center</string>
    <string name="firmware_device_updating">Updating: device control module</string>
    <string name="firmware_gw_updating">Updating:connection module</string>
    <string name="firmware_has_upgrade_title">New device firmware</string>
    <string name="firmware_no_update_one">Version:</string>
    <string name="firmware_no_update_title">Firmware is the latest version</string>
    <string name="firmware_upgrade_dev">Device control module</string>
    <string name="firmware_upgrade_failure_description">Please restart the device and try again
    </string>
    <string name="firmware_upgrade_gw">Connection module:</string>
    <string name="firmware_upgrade_now">Upgrade now</string>
    <string name="gesture_password_forget">Forgot pattern password</string>
    <string name="gesture_password_input_limit">Trying too often, please retry after %d minutes
    </string>
    <string name="gesture_password_input_new">New pattern password</string>
    <string name="gesture_password_input_original">Enter correct pattern password</string>
    <string name="gesture_password_reset">Whether to reset pattern password?</string>
    <string name="gesture_password_set_successful">Successfully set your pattern</string>
    <string name="home_no_device">Empty List</string>
    <string name="input_login_password">Enter login password</string>
    <string name="input_password_again">Enter password again</string>
    <string name="key_num_not_reasonable">Password length is 6-13 characters, please try again
    </string>
    <string name="key_num_not_uniform">Password not the same, please try again</string>
    <string name="local_space_no_enough">Local space not enough</string>
    <string name="login_find_password">Request password</string>
    <string name="login_forget">Forgot password</string>
    <string name="login_forget_photo">Enter registered number</string>
    <string name="login_password">Login password</string>
    <string name="login_register">Register</string>
    <string name="login_space">|</string>
    <string name="login_tip">Smart life. Smart living</string>
    <string name="my_smart_home_prepare">Devices(Prepare)</string>
    <string name="never_bind">Unbound</string>
    <string name="no_timer_list_tip">Auto mode is on, please add a timer</string>
    <string name="package_mode_demo">DEMO</string>
    <string name="please_input_wifi_password">Please input password</string>
    <string name="refind_password">Found login password</string>
    <string name="single_week_five">Fri</string>
    <string name="single_week_four">Thu</string>
    <string name="single_week_one">Mon</string>
    <string name="single_week_seven">Sun</string>
    <string name="single_week_six">Sat</string>
    <string name="single_week_three">Wed</string>
    <string name="single_week_two">Tue</string>
    <string name="taste_device_support">It\'s for demo purposes only</string>
    <string name="timer_task">Task</string>
    <string name="timer_time">Time</string>
    <string name="ty_add_device_find_dev">Find device</string>
    <string name="ty_add_device_initialize">Initialize device</string>
    <string name="ty_add_device_reg_cloud">Register device to the cloud</string>
    <string name="ty_app_upgrade_tips">Your app version don\'t support the device, please update to
        the latest version.
    </string>
    <string name="ty_bind_phone_num">Bind phone number first</string>
    <string name="ty_bind_phone_num_now">Bind it now</string>
    <string name="ty_camera_framework_bug">Can\'t open camera</string>
    <string name="ty_cant_control_info">Operation is not available, please try later</string>
    <string name="ty_change_gesture">Change pattern password</string>
    <string name="ty_change_keyword">Change password</string>
    <string name="ty_change_login_keyword">Change login password</string>
    <string name="ty_config_device_init_tip">Initializing the device&#046;&#046;&#046;</string>
    <string name="ty_connect_net_modules">Connection module</string>
    <string name="ty_control_panel_factory_reset">Restore manufacture defaults</string>
    <string name="ty_control_panel_factory_reset_fail">Restoring failed, please retry</string>
    <string name="ty_control_panel_factory_reset_info">Device as well as related data will be
        removed after restoring manufacture defaults
    </string>
    <string name="ty_control_panel_factory_reset_succ">Success</string>
    <string name="ty_control_panel_factory_reseting">Restoring, please don\'t turn it off&#046;&#046;&#046;.</string>
    <string name="ty_creat_gesture">Enter pattern password</string>
    <string name="ty_creat_gesture_again">Enter pattern password again</string>
    <string name="ty_creat_gesture_key">Create pattern password</string>
    <string name="ty_creat_gesture_key_info">Create a pattern password. Other persons can\'t control
        your devices even with your smartphone
    </string>
    <string name="ty_creat_gesture_succ">Successfully create pattern password</string>
    <string name="ty_current_bind_phone_tip">The bound account is:</string>
    <string name="ty_development_tool_pid_fail">Failed to transmit product ID, please retry</string>
    <string name="ty_development_tool_pid_succ">Successfully transmit product ID</string>
    <string name="ty_device_control_modules">Device control module</string>
    <string name="ty_enter_old_gesture">Please enter old pattern password</string>
    <string name="ty_ez_ap">Still not working, try other ways</string>
    <string name="ty_ez_toast_different_wifi">Confirm that phone and device are connected to the
        same Wi-Fi
    </string>
    <string name="ty_ez_try">Please try again</string>
    <string name="ty_gesture_not_correct">Incorrect password, please re-enter</string>
    <string name="ty_gesture_not_correct_times">Error, please reset pattern password</string>
    <string name="ty_gesture_not_matching">Pattern password error, please re-enter</string>
    <string name="ty_gesture_not_set">Not set yet</string>
    <string name="ty_input_new_keyword">Enter the new password</string>
    <string name="ty_input_old_keyword">Enter old password</string>
    <string name="ty_keep_net_working">Please don\'t cut off power,\n keep network expedite</string>
    <string name="ty_keep_power_working">Please don\'t cut off power</string>
    <string name="ty_login_fb">facebook</string>
    <string name="ty_login_forget_keyword_find">Find password</string>
    <string name="ty_login_ins">instagram</string>
    <string name="ty_login_qq">QQ</string>
    <string name="ty_login_tw">twitter</string>
    <string name="ty_login_wechat">WeChat</string>
    <string name="ty_login_weibo">weibo</string>
    <string name="ty_mobile_binding_tip">Login with mobile number after verification</string>
    <string name="ty_mobile_change_button">Change mobile number</string>
    <string name="ty_mobile_change_phone">Your mobile number</string>
    <string name="ty_mobile_change_tip">Login with mobile number</string>
    <string name="ty_modify_device_name_length_limit">No more than 25 characters for device name
    </string>
    <string name="ty_modify_group_name_length_limit">No more than 25 characters for group name
    </string>
    <string name="ty_mqtt_connecting">Device is connecting&#046;&#046;&#046;.</string>
    <string name="ty_net_useless_info">Network is unavailable</string>
    <string name="ty_no_net_info">Network error, please check</string>
    <string name="ty_not_bind_phone_num">Not bind phone number yet\n Can\'t change password</string>
    <string name="ty_offline_delete_share">Delete sharing</string>
    <string name="ty_offline_subtitle">Please check or retry</string>
    <string name="ty_offline_title">The device is offline</string>
    <string name="ty_pattern_auto_des">Turn on to add new timer</string>
    <string name="ty_pattern_manual">Manual</string>
    <string name="ty_permission_tip_contact">Failed to obtain contact information, please grant the
        permission in phone \"Settings-Applications-%1$s-Permissions\"
    </string>
    <string name="ty_permission_tip_location">- Get permission to location information</string>
    <string name="ty_permission_tip_phone_state">- Get permission to read phone status</string>
    <string name="ty_permission_tip_read_set">To normally use %1$s, please grant permission to
        \"read or write system settings\"
    </string>
    <string name="add_alarm_timer">Add timer</string>
    <string name="cancel">Cancel</string>
    <string name="firmware_upgrade">Firmware Upgrade</string>
    <string name="go_next">Next</string>
    <string name="input_password">Password</string>
    <string name="logout">Logout</string>
    <string name="ez_notSupport_5G">This app is supported only on 2.4GHz Wi-Fi channels</string>
    <string name="ty_ap_connect_description">Open phone \"setting-WLAN\" and connect to the Wi-Fi
        network
    </string>
    <string name="ty_ap_connect_go">Connect now</string>
    <string name="ty_ap_connect_help">Not connecting? Refer to help</string>
    <string name="ty_ez_current_no_wifi">Phone is not connecting Wi-Fi at present</string>
    <string name="ty_ez_other_wifi">Use other Wi-Fi</string>
    <string name="ty_login_register">Register</string>
    <string name="upgrade_now">Start Upgrade</string>
    <string name="upgrade_cancel">Cancel Upgrade</string>
    <string name="send_command">Send Dp Command</string>
    <string name="start">Start</string>
    <string name="look_test_value">Edit Test Value</string>
    <string name="username_email">Please Input Email</string>
    <string name="device_state">设备状态：</string>
    <string name="get_history_data">获取历史数据</string>
    <string name="get_device_status">获取状态</string>
    <string name="get_all_timer">获取所有定时</string>
    <string name="get_task_timer">获取任务定时</string>
    <string name="update_timer">更新定时器</string>
    <string name="delete_timer">删除定时器</string>
    <string name="open_close_timer">开关定时器</string>
    <string name="open_close_timer_task">开关定时任务</string>
</resources>