<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    tools:context=".android.demo.MainActivity">


    <LinearLayout
        android:id="@+id/user"
        android:layout_width="match_parent"
        android:layout_height="wrap_content">


        <Button
            android:id="@+id/do_logout"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/logout" />


    </LinearLayout>

    <Button
        android:id="@+id/command_submit"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/user"
        android:text="@string/device_list" />

    <Button
        android:id="@+id/goto_share"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/command_submit"
        android:text="@string/share_list" />

    <Button
        android:id="@+id/btn_rename"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@+id/goto_share"
        android:text="@string/reNickName" />

    <TextView
        android:id="@+id/demo_log"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/demo_action"
        android:layout_below="@+id/btn_rename"
        android:text="" />

    <LinearLayout
        android:id="@+id/demo_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true">

        <Button
            android:id="@+id/demo_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ec_start" />

        <Button
            android:id="@+id/demo_cancel"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ec_cancel" />


        <Button
            android:id="@+id/demo_remove"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/remove_device" />

    </LinearLayout>

    <LinearLayout
        android:id="@+id/ll_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/demo_action">

        <Button
            android:id="@+id/ap_demo_start"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/ap_start" />
        />


    </LinearLayout>
</RelativeLayout>
