<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background_home"
    android:orientation="vertical">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view" />

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_add_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/add_alarm_timer" />

            <Button
                android:id="@+id/bt_get_status_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/get_device_status" />

            <Button
                android:id="@+id/bt_update_task_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/open_close_timer_task" />

            <Button
                android:id="@+id/bt_update_timer_status"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/open_close_timer" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <Button
                android:id="@+id/bt_del_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/delete_timer" />

            <Button
                android:id="@+id/bt_update_timer"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/update_timer" />

            <Button
                android:id="@+id/bt_get_timer_4_task"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/get_task_timer" />

            <Button
                android:id="@+id/bt_get_timer_4_dev"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:onClick="onTimerClick"
                android:text="@string/get_all_timer" />
        </LinearLayout>


        <ScrollView
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tv_info"
                style="@style/TextView.Normal"
                android:layout_width="match_parent"
                android:layout_height="wrap_content" />
        </ScrollView>

    </LinearLayout>


    <ListView
        android:id="@+id/lv_timer"
        android:layout_width="wrap_content"
        android:layout_height="match_parent"
        android:background="@android:color/white" />
</LinearLayout>