<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
              android:layout_width="match_parent"
              android:layout_height="match_parent"
              android:orientation="vertical">

    <EditText
        android:id="@+id/et_email"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/username_email"/>

    <EditText
        android:id="@+id/et_password_code"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:hint="@string/input_password"/>

    <Button
        android:id="@+id/do_register"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:text="@string/ty_login_register"/>


</LinearLayout>