<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/background_home"
                android:orientation="vertical">

    <TextView android:id="@+id/test_mode"
              style="@style/TextView.Normal"
              android:layout_width="match_parent"
              android:layout_height="wrap_content"
              android:text="Dp Test"
    />
    <ScrollView
        android:id="@+id/test_scroll"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_above="@+id/test_action"
        android:layout_below="@+id/test_mode">

        <TextView
            android:id="@+id/test_log"
            style="@style/TextView.Normal"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
        />
    </ScrollView>

    <LinearLayout
        android:id="@+id/test_action"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_15"
        android:orientation="horizontal">

        <Button
            android:id="@+id/btn_start"
            style="@style/Button.Normal"
            android:layout_weight="1"
            android:text="@string/start"/>

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>

        <Button android:id="@+id/btn_edit_test"
                style="@style/Button.Normal"
                android:layout_weight="1"
                android:text="@string/look_test_value"
        />

        <View
            android:layout_width="10dp"
            android:layout_height="match_parent"
            android:layout_weight="0"/>
        <Button
            android:id="@+id/btn_cancel"
            style="@style/Button.Normal"
            android:layout_weight="1"
            android:text="@string/cancel"/>
    </LinearLayout>


</RelativeLayout>