<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="?attr/app_bg_color">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view"/>

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar_layout"
        android:layout_margin="32dp"
        android:gravity="center_horizontal"
        android:orientation="vertical">

        <FrameLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <ImageView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:scaleType="fitXY"
                android:src="@drawable/ty_adddevice_ap_screen"/>

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="194dp"
                android:layout_marginLeft="70dp"
                android:id="@+id/tv_ap_ssid"
                android:textColor="#1E1E1E"/>

        </FrameLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_ap_connect_description"
            android:textColor="@color/colorNormal"
            android:layout_marginTop="@dimen/mg_16"
            android:gravity="center"
            android:textSize="@dimen/ts_14"/>

        <TextView
            android:id="@+id/add_device_tip_help"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="32dp"
            android:text="@string/ty_ap_connect_help"
            android:textColor="?attr/navbar_font_color"
            android:textSize="@dimen/ts_13"/>

    </LinearLayout>


    <Button
        android:id="@+id/tv_bottom_button"
        style="@style/Button.Normal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_16"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginRight="@dimen/mg_15"
        android:text="@string/ty_ap_connect_go"
        android:textSize="@dimen/ts_15"/>

</RelativeLayout>