<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@color/default_bg">

    <include
        android:id="@+id/action_bar_layout"
        layout="@layout/toolbar_top_view"/>

    <TextView
        android:id="@+id/network_tip"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/action_bar_layout"
        android:background="#33FFD000"
        android:gravity="center"
        android:padding="@dimen/mg_5"
        android:text="@string/ez_notSupport_5G"
        android:textColor="?attr/navbar_font_color"
        android:textSize="@dimen/ts_14"
        android:visibility="gone"/>


    <ImageView
        android:id="@+id/iv_wifi"
        android:layout_width="@dimen/mg_100"
        android:layout_height="@dimen/mg_100"
        android:layout_below="@id/action_bar_layout"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="86dp"
        android:background="@drawable/bg_bt_circle"
        android:scaleType="centerInside"
    />


    <LinearLayout
        android:id="@+id/ll_wifi_status"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/iv_wifi"
        android:layout_centerHorizontal="true"
        android:layout_marginTop="@dimen/mg_24"
    >

        <TextView
            android:id="@+id/tv_wifi_status"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/ty_ez_current_no_wifi"
            android:textColor="#626262"
            android:textSize="@dimen/ts_14"
        />

        <TextView
            android:id="@+id/tv_network"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="@dimen/mg_5"
            android:layout_marginStart="@dimen/mg_5"
            android:textColor="#000000"
            android:textSize="@dimen/ts_14"
        />
    </LinearLayout>


    <TextView
        android:id="@+id/tv_other_wifi"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@+id/ll_wifi_status"
        android:layout_centerHorizontal="true"
        android:padding="8dp"
        android:text="@string/ty_ez_other_wifi"
        android:textColor="?attr/navbar_font_color"
        android:textSize="@dimen/ts_14"/>


    <RelativeLayout
        android:id="@+id/rl_password"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_below="@+id/tv_other_wifi"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginRight="@dimen/mg_15"
        android:layout_marginTop="56dp"
        android:background="@drawable/bg_textview">

        <ImageView
            android:id="@+id/iv_password"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentLeft="true"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/mg_16"
            android:background="@drawable/ty_adddevice_password_icon"/>

        <EditText
            android:id="@+id/et_password"
            style="@style/edit_text_input"
            android:layout_centerVertical="true"
            android:layout_marginLeft="@dimen/mg_16"
            android:layout_toLeftOf="@+id/ec_password_switch"
            android:layout_toRightOf="@+id/iv_password"
            android:hint="@string/please_input_wifi_password"
            android:imeOptions="actionDone"
            android:text="20112012pw"
            android:textColorHint="#9b9b9b"
            android:textSize="15sp"/>

        <ImageButton
            android:id="@+id/ec_password_switch"
            android:layout_width="wrap_content"
            android:layout_height="40dp"
            android:layout_alignParentRight="true"
            android:layout_centerVertical="true"
            android:layout_marginRight="@dimen/mg_5"
            android:background="@color/white"
            android:paddingLeft="@dimen/mg_5"
            android:paddingRight="@dimen/mg_5"
            android:scaleType="centerInside"
            android:src="@drawable/ty_password_on"/>
    </RelativeLayout>


    <Button
        android:id="@+id/tv_bottom_button"
        style="@style/Button.Normal"
        android:layout_width="match_parent"
        android:layout_height="44dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="@dimen/mg_15"
        android:layout_marginLeft="@dimen/mg_15"
        android:layout_marginRight="@dimen/mg_15"
        android:text="@string/go_next"
        android:textSize="@dimen/ts_15"/>
</RelativeLayout>